# painter

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: context2d.rs  lib.rs  operate.rs  path.rs  style_bucket.rs  transform.rs
core/src/backend/: mod.rs  skia.rs  skia_cpu.rs  svg.rs
core/src/filter/: drop_shadow.rs  mod.rs
core/src/font/: mod.rs
core/src/helps/: mod.rs  polygon.rs
core/src/paint/: blend.rs  color.rs  mod.rs  shader.rs  stroke.rs
font/: Cargo.toml
font/src/: lib.rs  parser.rs  woff.rs
src/: lib.rs
wasm/: Cargo.toml
wasm/src/: canvas.rs  context.rs  lib.rs  path.rs
wasm/test/: test.html
