[package]
name = "painter_wasm"
version = "0.1.0"
edition = "2021"
description = "simple canvas implementation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
painter_core = { path = "../core" }
painter_font = { path = "../font" }
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window', 'HtmlImageElement', 'ImageData'] }
svgtypes = "0.8.1"
base64 = "0.13.0"
